2010-03-20 Homer Xing <homer.xing@gmail.com>

    * Remove "Offline installation" functionality.
    * Fix "Quick setup is not launchable" issue.

2010-03-20 MA Yue <velly.empire@gmail.com>

    * Improve Java version display.
    * Add copyright certify for new icons.
    * Improve text font on splash window.

2010-03-19 MA Yue <velly.empire@gmail.com>

    * Ailurus has new toolbar icon and splash now!
    * Change toolbar icon size to 40.

2010-03-19 Homer Xing <homer.xing@gmail.com>

    * Merge menubar and toolbar. 
      "Study linux", "Preferences" and "Others" menu are moved into toolbar.
      Enlarge toolbar icon to 64 x 64.
      Show text under icon. 

2010-03-18 Starboy Qi <starboy.qi@gmail.com>

    * We can read change log in "About" dialog now.

2010-03-18 Homer Xing <homer.xing@gmail.com>

    * Simplify source code.
      Take out "change language" functionality. Use native locale information instead.
      Delete "show Chinese apps" and "show Poland apps" functionality.

2010-03-17 MA Yue <velly.empire@gmail.com>

    * Add "Lucid layout" for window titlebar buttons
    * Merge "automount", "show more permissions setting", "hide size column" into one section

2010-03-16 MA Yue <velly.empire@gmail.com>

    * Add functionality for hiding the SIZE columns in Nautilus list view.
    * Add functionality for changing default window manager, file manager and panel program 
    * Add functionality for changing menubar.
    * Add NScript: some useful Nautilus scripts

2010-03-16 Homer Xing <homer.xing@gmail.com>

    * Adopt distutils. 
      We can use "python setup.py install" to install ailurus now.

2010-03-15 MA Yue <velly.empire@gmail.com>

    * Add functionality for changing /apps/gnome-power-manager/lock/hibernate
                                     /apps/gnome-power-manager/lock/suspend
                                     /apps/nautilus/preferences/desktop_is_home_dir