@@ -1,3 +1,7 @@
+2010-03-21 MA Yue <velly.empire@gmail.com>
+    
+    * Add the Shortcut Function
+
 2010-03-20 Homer Xing <homer.xing@gmail.com>
 
     * Remove "Offline installation" functionality.
